<resources>
    <string name="app_name">Groceries</string>
    <string name="grocery_image">Grocery image</string>
    <string name="add">Add</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="decrease">Decrease</string>
    <string name="increase">Increase</string>
    <string name="new_grocery_fill_out_all">Name is required!</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="delete_warning">Are you sure you want to delete this?</string>
    <string name="cancel">Cancel</string>
    <string name="no_entry">No entry.</string>
</resources>