<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.newgrocery.NewGroceryFragment">

    <ImageView
        android:id="@+id/new_grocery_image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/new_grocery_image_guid_line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_image_24" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/new_grocery_image_guid_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <ImageView
        android:id="@+id/new_grocery_plus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/new_grocery_image"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_add_24" />

    <TextView
        android:id="@+id/new_grocery_quantity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="0"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintEnd_toEndOf="@id/new_grocery_plus"
        app:layout_constraintStart_toStartOf="@id/new_grocery_plus"
        app:layout_constraintTop_toBottomOf="@id/new_grocery_plus" />

    <ImageView
        android:id="@+id/new_grocery_minus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/new_grocery_plus"
        app:layout_constraintStart_toStartOf="@id/new_grocery_plus"
        app:layout_constraintTop_toBottomOf="@id/new_grocery_quantity"
        app:srcCompat="@drawable/ic_baseline_remove_24" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="new_grocery_image, new_grocery_minus" />

    <EditText
        android:id="@+id/new_grocery_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier" />

    <EditText
        android:id="@+id/new_grocery_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_grocery_name" />

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>