<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="grocery"
            type="com.zkathi.data.domain.model.Grocery" />

        <variable
            name="groceryVH"
            type="com.zkathi.grocerylist.ui.grocerylist.GroceryViewHolder" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="@{_ -> groceryVH.navigate()}"
        android:layout_marginVertical="@dimen/margin_small">

        <View
            android:id="@+id/item_grocery_color_indicator"
            colorIndicator="@{grocery.quantity}"
            android:layout_width="@dimen/vertical_line_width"
            android:layout_height="@dimen/vertical_line_height"
            android:background="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/item_grocery_image"
            loadFromUri="@{grocery.image_name}"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/margin_small"
            android:adjustViewBounds="true"
            android:contentDescription="@string/grocery_image"
            android:src="@drawable/ic_baseline_image_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/item_grocery_color_indicator"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/item_grocery_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@{grocery.name, default=Name}"
            android:textSize="@dimen/text_size_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/item_grocery_image"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/item_grocery_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/decrease"
            android:foreground="?selectableItemBackground"
            android:onClick="@{_ -> groceryVH.decreaseQuantity()}"
            android:padding="@dimen/icon_quantity_padding"
            android:src="@drawable/ic_baseline_remove_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/item_grocery_quantity"
            app:layout_constraintStart_toEndOf="@id/item_grocery_image"
            app:layout_constraintTop_toBottomOf="@id/item_grocery_name" />

        <TextView
            android:id="@+id/item_grocery_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{Integer.toString(grocery.quantity), default=0}"
            android:textSize="@dimen/text_size_large"
            app:layout_constraintBottom_toBottomOf="@id/item_grocery_minus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/item_grocery_image"
            app:layout_constraintTop_toTopOf="@id/item_grocery_minus" />

        <ImageView
            android:id="@+id/item_grocery_plus"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:contentDescription="@string/increase"
            android:foreground="?selectableItemBackground"
            android:onClick="@{_ -> groceryVH.increaseQuantity()}"
            android:padding="@dimen/icon_quantity_padding"
            android:src="@drawable/ic_baseline_add_24"
            app:layout_constraintBottom_toBottomOf="@+id/item_grocery_minus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/item_grocery_quantity"
            app:layout_constraintTop_toTopOf="@+id/item_grocery_minus" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>